# aiokef

./: .bumpversion.cfg  .gitattributes  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  hacs.json  mypy.ini  pykef.py  pyproject.toml  setup.cfg  setup.py  testing-notebook.ipynb  tox.ini
.github/workflows/: main.yml  pytest.yml
aiokef/: __init__.py  _version.py  aiokef.py
custom_components/kef/: async_kef_api.py  async_sockets.py  kef_api.py  manifest.json  media_player.py  pykef.py
custom_components/kefwireless/: pykef.py
docs/: .gitignore  conf.py  index.rst
kefwireless/: README.md  kefwireless.py  pykef.py
lirc/: KEF_LS50_WIRELESS.lircd
pykef/: __init__.py
tests/: test_aiokef.py
