[build-system]
requires = ["setuptools>=42", "wheel", "versioningit ~= 2.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiokef"
description = "Asyncio Python API for KEF speakers"
authors = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
dependencies = [
    "typing-extensions; python_version < '3.8'",
    "async-timeout",
    "tenacity",
]
requires-python = ">=3.7"
dynamic = ["version"]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/basnijholt/aiokef"

[project.optional-dependencies]
test = ["pytest", "pre-commit", "coverage", "pytest-cov", "pytest-mypy"]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "m2r2",                 # markdown support
    "sphinxcontrib.apidoc", # run sphinx-apidoc when building docs
]
dev = ["pre-commit"]

[tool.setuptools]
py-modules = ["aiokef"]

[tool.versioningit]

[tool.versioningit.vcs]
method = "git"
match = ["v*"]
default-tag = "0.0.0"

[tool.pytest.ini_options]
addopts = """
    --cov=aiokef
    --cov-report term
    --cov-report html
    --cov-fail-under=100
"""

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line_length = 88

[tool.ruff]
line-length = 150
target-version = "py37"
select = ["B", "C", "E", "F", "W", "T", "B9"]
ignore = [
    "T20",     # flake8-print
    "ANN101",  # Missing type annotation for {name} in method
    "S101",    # Use of assert detected
    "PD901",   # df is a bad variable name. Be kinder to your future self.
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "D402",    # First line should not be the function's signature
    "PLW0603", # Using the global statement to update `X` is discouraged
    "D401",    # First line of docstring should be in imperative mood
]

[tool.ruff.per-file-ignores]
"tests/*" = ["SLF001"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.mypy]
python_version = "3.7"
